<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".PlayerSetup">

    <TextView
        android:id="@+id/setup_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="monospace"
        android:text="@string/setup_title_txt_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/board_titles"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/player1_txt_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/lightRed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enter_name1_id"
        app:layout_constraintStart_toStartOf="@+id/enter_name1_id" />

    <TextView
        android:id="@+id/player2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/player2_txt_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/lightBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enter_name2_id"
        app:layout_constraintStart_toStartOf="@+id/enter_name2_id" />

    <EditText
        android:id="@+id/enter_name1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_title_id" />

    <EditText
        android:id="@+id/enter_name2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name1_id" />

    <Button
        android:id="@+id/setup_btn_id"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:background="@drawable/red_btn"
        android:fontFamily="monospace"
        android:onClick="submitClick"
        android:text="@string/setup_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name2_id" />
</androidx.constraintlayout.widget.ConstraintLayout>